crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP009_1.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
./resources/test/fixtures/pyupgrade/UP009_1.py:2:1: UP009 [*] UTF-8 encoding declaration is unnecessary
  |
2 |   #!/usr/bin/python
3 | / # -*- coding: utf-8 -*-
4 | | 
  | |_^ UP009
5 |   print('Hello world')
  |
  = help: Remove unnecessary coding comment

ℹ Suggested fix
1 1 | #!/usr/bin/python
2   |-# -*- coding: utf-8 -*-
3 2 | 
4 3 | print('Hello world')


