crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP009_6.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
UP009_6.py:1:2: UP009 [*] UTF-8 encoding declaration is unnecessary
  |
1 |  # coding=utf8
  |  ^^^^^^^^^^^^^ UP009
2 | print("Hello world")
  |
  = help: Remove unnecessary coding comment

ℹ Fix
1   |- # coding=utf8
2 1 | print("Hello world")
3 2 | 
4 3 | """


